--- a/todos.org
+++ b/todos.org
@@ -31,6 +31,7 @@ CLOCK: [2024-02-02 Fri 10:28]--[2024-02-02 Fri 11:24] =>  0:56
 :EFFORT:   15:00
 :END:
 :LOGBOOK:
+CLOCK: [2024-02-09 Fri 18:57]--[2024-02-09 Fri 19:33] =>  0:36
 CLOCK: [2024-02-09 Fri 07:48]--[2024-02-09 Fri 08:13] =>  0:25
 CLOCK: [2024-02-09 Fri 02:11]--[2024-02-09 Fri 07:24] =>  5:13
 CLOCK: [2024-02-08 Thu 16:37]--[2024-02-08 Thu 18:47] =>  2:10
@@ -38,4 +39,8 @@ CLOCK: [2024-02-08 Thu 16:35]--[2024-02-08 Thu 16:36] =>  0:01
 :END:
 
 * Notes
-Final write: create a string with all strs in buffer then write or write one link at the time ?
+Steps :
+1. tokenize format string
+2. Convert links and add a link before/after for prefix & suffix. Keep total len in first link.
+3. Create the final string with only 1 malloc of the total len then copy all the strings.
+4. write the final string.
