--- a/todos.org
+++ b/todos.org
@@ -31,6 +31,8 @@ CLOCK: [2024-02-02 Fri 10:28]--[2024-02-02 Fri 11:24] =>  0:56
 :EFFORT:   15:00
 :END:
 :LOGBOOK:
+CLOCK: [2024-02-12 Mon 14:26]--[2024-02-12 Mon 15:04] =>  0:38
+CLOCK: [2024-02-12 Mon 12:57]--[2024-02-12 Mon 14:03] =>  1:06
 CLOCK: [2024-02-09 Fri 18:57]--[2024-02-09 Fri 19:33] =>  0:36
 CLOCK: [2024-02-09 Fri 07:48]--[2024-02-09 Fri 08:13] =>  0:25
 CLOCK: [2024-02-09 Fri 02:11]--[2024-02-09 Fri 07:24] =>  5:13
@@ -39,6 +41,7 @@ CLOCK: [2024-02-08 Thu 16:35]--[2024-02-08 Thu 16:36] =>  0:01
 :END:
 
 * Notes
+When error : write already registered links but return -1
 Steps :
 1. tokenize format string
 2. Convert links and add a link before/after for prefix & suffix. Keep total len in first link.
