--- a/README.org
+++ b/README.org
@@ -43,6 +43,8 @@ The =unsigned int= argument is converted to unsigned hexadecimal. The letters *A
 #+begin_quote
 The converted value is to be left adjusted on the field boundary. The converted value is padded on the right with blanks. *A - overrides a 0 if both are given*.
 #+end_quote
+Behavior:
+- %c: blanks on the right
 ** 0
 #+begin_quote
 The value should be zero padded. The converted value is padded on the left with zeros rather than blanks. *If the 0 and - flags both appear, the 0 is ignored.* If a precision given with d, i, o, u, x or X, 0 flag ignored. For other conversion, undefined behavior.
@@ -55,6 +57,8 @@ The value should be zero padded. The converted value is padded on the left with 
 #+begin_quote
 An optional digit string specifying min field width. "*" to specify that precision is given in next argument, "*x$" for x-th argument. If converted value has fewer characters than field width => padded with spaces on the left (right if -).
 #+end_quote
+Behavior:
+- %c: blanks on the left
 ** #
 #+begin_quote
 Value converted to an "alternate form". For x and X a nonzero result has 0x or 0X prepended to it.
