--- a/todos.org
+++ b/todos.org
@@ -31,6 +31,8 @@ CLOCK: [2024-02-02 Fri 10:28]--[2024-02-02 Fri 11:24] =>  0:56
 :EFFORT:   15:00
 :END:
 :LOGBOOK:
+CLOCK: [2024-02-13 Tue 17:00]--[2024-02-13 Tue 17:13] =>  0:13
+CLOCK: [2024-02-13 Tue 14:58]--[2024-02-13 Tue 16:15] =>  1:17
 CLOCK: [2024-02-13 Tue 03:26]--[2024-02-13 Tue 04:49] =>  1:23
 CLOCK: [2024-02-13 Tue 02:17]--[2024-02-13 Tue 02:50] =>  0:33
 CLOCK: [2024-02-13 Tue 01:40]--[2024-02-13 Tue 02:08] =>  0:28
