--- a/todos.org
+++ b/todos.org
@@ -31,6 +31,12 @@ CLOCK: [2024-02-02 Fri 10:28]--[2024-02-02 Fri 11:24] =>  0:56
 :EFFORT:   15:00
 :END:
 :LOGBOOK:
+CLOCK: [2024-02-14 Wed 06:29]--[2024-02-14 Wed 07:15] =>  0:46
+CLOCK: [2024-02-14 Wed 05:36]--[2024-02-14 Wed 05:47] =>  0:11
+CLOCK: [2024-02-14 Wed 04:41]--[2024-02-14 Wed 05:25] =>  0:44
+CLOCK: [2024-02-14 Wed 00:17]--[2024-02-14 Wed 00:40] =>  0:23
+CLOCK: [2024-02-13 Tue 23:46]--[2024-02-13 Tue 23:47] =>  0:01
+CLOCK: [2024-02-13 Tue 21:05]--[2024-02-13 Tue 21:31] =>  0:26
 CLOCK: [2024-02-13 Tue 17:00]--[2024-02-13 Tue 17:13] =>  0:13
 CLOCK: [2024-02-13 Tue 14:58]--[2024-02-13 Tue 16:15] =>  1:17
 CLOCK: [2024-02-13 Tue 03:26]--[2024-02-13 Tue 04:49] =>  1:23
