--- a/todos.org
+++ b/todos.org
@@ -31,6 +31,8 @@ CLOCK: [2024-02-02 Fri 10:28]--[2024-02-02 Fri 11:24] =>  0:56
 :EFFORT:   15:00
 :END:
 :LOGBOOK:
+CLOCK: [2024-02-15 Thu 19:30]--[2024-02-15 Thu 20:19] =>  0:49
+CLOCK: [2024-02-15 Thu 17:35]--[2024-02-15 Thu 19:04] =>  1:29
 CLOCK: [2024-02-14 Wed 06:29]--[2024-02-14 Wed 07:15] =>  0:46
 CLOCK: [2024-02-14 Wed 05:36]--[2024-02-14 Wed 05:47] =>  0:11
 CLOCK: [2024-02-14 Wed 04:41]--[2024-02-14 Wed 05:25] =>  0:44
