Update tests & time

--- a/todos.org
+++ b/todos.org
@@ -9,6 +9,7 @@ DEADLINE: <2024-02-09 Fri>
 :Effort:   5:00
 :END:
 :LOGBOOK:
+CLOCK: [2024-02-16 Fri 17:28]--[2024-02-16 Fri 17:37] =>  0:09
 CLOCK: [2024-02-07 Wed 03:20]--[2024-02-07 Wed 03:55] =>  0:35
 CLOCK: [2024-02-07 Wed 02:11]--[2024-02-07 Wed 02:27] =>  0:16
 CLOCK: [2024-02-07 Wed 00:18]--[2024-02-07 Wed 01:22] =>  1:04
@@ -31,6 +32,10 @@ CLOCK: [2024-02-02 Fri 10:28]--[2024-02-02 Fri 11:24] =>  0:56
 :EFFORT:   15:00
 :END:
 :LOGBOOK:
+CLOCK: [2024-02-16 Fri 19:00]--[2024-02-16 Fri 19:29] =>  0:29
+CLOCK: [2024-02-16 Fri 17:53]--[2024-02-16 Fri 18:55] =>  1:02
+CLOCK: [2024-02-16 Fri 15:59]--[2024-02-16 Fri 17:27] =>  1:28
+CLOCK: [2024-02-16 Fri 14:57]--[2024-02-16 Fri 15:56] =>  0:59
 CLOCK: [2024-02-16 Fri 12:09]--[2024-02-16 Fri 13:49] =>  1:40
 CLOCK: [2024-02-16 Fri 11:47]--[2024-02-16 Fri 12:09] =>  0:22
 CLOCK: [2024-02-16 Fri 10:20]--[2024-02-16 Fri 11:40] =>  1:20
