--- a/todos.org
+++ b/todos.org
@@ -32,6 +32,15 @@ CLOCK: [2024-02-02 Fri 10:28]--[2024-02-02 Fri 11:24] =>  0:56
 :EFFORT:   15:00
 :END:
 :LOGBOOK:
+CLOCK: [2024-02-17 Sat 03:32]--[2024-02-17 Sat 07:10] =>  3:38
+CLOCK: [2024-02-17 Sat 02:49]--[2024-02-17 Sat 03:13] =>  0:24
+CLOCK: [2024-02-17 Sat 01:54]--[2024-02-17 Sat 02:45] =>  0:51
+CLOCK: [2024-02-17 Sat 01:34]--[2024-02-17 Sat 01:52] =>  0:18
+CLOCK: [2024-02-17 Sat 00:57]--[2024-02-17 Sat 01:03] =>  0:06
+CLOCK: [2024-02-17 Sat 00:30]--[2024-02-17 Sat 00:41] =>  0:11
+CLOCK: [2024-02-17 Sat 00:17]--[2024-02-17 Sat 00:29] =>  0:12
+CLOCK: [2024-02-16 Fri 23:14]--[2024-02-17 Sat 00:11] =>  0:57
+CLOCK: [2024-02-16 Fri 21:54]--[2024-02-16 Fri 23:11] =>  1:17
 CLOCK: [2024-02-16 Fri 19:00]--[2024-02-16 Fri 19:29] =>  0:29
 CLOCK: [2024-02-16 Fri 17:53]--[2024-02-16 Fri 18:55] =>  1:02
 CLOCK: [2024-02-16 Fri 15:59]--[2024-02-16 Fri 17:27] =>  1:28
